# 2S0t2a4r0g3a1z5r

./: .prettierignore  CMakeLists.txt  setup.py  uwsgi.ini
fxweb/: CMakeLists.txt  uwsgi.ini
fxweb/cmake/: jsbuild.cmake  nginx.cmake  uwsgibuild.cmake  venvbuild.cmake  wheelbuild.cmake
fxweb/js/: .eslintrc.js  html-minify.json  package-lock.json  package.json
fxweb/js/guardian/vue/: deviceManagement.js  main.js
fxweb/js/guardian/vue/components/: HsmGroupManagement.vue  HsmSecuritySettings.vue
fxweb/js/guardian/vue/static/: .gitkeep
fxweb/js/kmes/vue/: VueModuleInit.js  landing.html  main.js
fxweb/js/kmes/vue/css/: main.scss  variables.scss
fxweb/js/kmes/vue/router/: index.js
fxweb/js/shared/protected_static/: filterService.js  fxAppModalService.js  fxAppObjectService.js  fxAppStringService.js  fxAppTreeService.js  fxAppViewService.js  fxAppX509Service.js  fxAppX509ServiceDefs.js  fxEncodeService.js  fxIOService.js  fxProgressService.js  logFetchService.js
fxweb/js/shared/protected_static/components/: fxTemplates.js
fxweb/js/shared/protected_static/directives/: fxButton.html  fxCheckbox.html  fxContainerListView.html  fxContainerListView.js  fxCounter.html  fxDate.html  fxDateRange.html  fxDateTime.html  fxFilterModal.html  fxInput.html  fxInputMask.html  fxListContent.html  fxListContentRows.html  fxListRow.html  fxPort.html  fxRawFile.html  fxSelectArr.html  fxSelectArrObj.html  fxSelectMultiple.html  fxSelectNestedObj.html  fxSelectObj.html  fxSelectObj2.html  fxTable.html  fxWideModal.html  fxWidgets.js
fxweb/js/shared/static/: fxCookieService.js  fxLogin.js  fxLoginService.js  login.html  unauthorized.html
fxweb/js/shared/static/css/: fx-animations.css  fx-app-view.css  fx-app.css  fx-container-list.css  fx-layout.css  fx-skin.css  fx-widgets.css  login.css
fxweb/js/shared/vue/: ClassPermissions.js  EncodingUtils.js  FilterService.js  FxAppViewUtils.js  FxStringUtils.js  LoginInfo.js  X509ServiceDefs.js  utils.js
fxweb/js/shared/vue/api/: MajorKeyApi.js
fxweb/js/shared/vue/fx-components/: index.js
fxweb/nginx/: kmes.conf  protected.conf
fxweb/python/: __init__.py  config.cfg.byok  config.cfg.guardian  config.cfg.kmes  config.cfg.regauth  requirements.txt  run.py  setup.py
fxweb/python/fx/: __init__.py  _path.py
fxweb/python/fx/application/base/: app_config.py  app_csrf.py  app_database.py  app_interface.py  app_sanitize.py  application_log.py  base_command.py  base_exceptions.py  base_translator.py  command_factory.py  conn_exceptions.py  database_factory.py  exception_registry.py  flask_interface.py  form_view.py  fx_view.py  global_container.py  interface_factory.py  schema.py  server_files.py  server_interface.py  server_request.py  server_views.py  static_content_view.py  uri_router.py  (+2 more)
fxweb/python/fx/tests/: test_app_interface.py  test_app_log.py  test_cache.py  test_connections.py  test_flask_interface.py  test_ra_routes.py
(+1142 files in other folders)
